# softSaber

./: .gitignore  README.md  pyproject.toml
data/processed/games/: 2024-05-04.parquet
data/processed/teams/: 2024.parquet
scripts/: diagnose_starters.py  probe_bm_verify.py
softsaber/: __init__.py  cli.py  config.py  export.py  http_cache.py  storage.py
softsaber/ingest/: __init__.py  akamai_session.py  boxscore.py  ncaa_api.py  ncaa_stats.py  pbp.py  playerbox.py  rosters.py  scoreboard.py  sdataprod.py  teams.py
softsaber/parse/: __init__.py  baserunners.py  events.py  nameutil.py  pa.py  pitcher.py
softsaber/stats/: __init__.py  fielding_independent.py  linear_weights.py  park_factors.py  rates.py  run_expectancy.py  wrc_plus.py
tests/: test_baserunners.py  test_events.py  test_export.py  test_nameutil.py  test_pipeline.py  test_pitcher.py  test_rates.py  test_scoreboard_parser.py
